fixed spacing issues for the table

--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,11 @@
 
 
 /* #HSTable {
+    height: auto;
+} */
+
+
+/* #HSTable {
     padding-top: 5%;
 } */
 
